jvm configuration load added to config loader